--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,9 +45,10 @@ jobs:
         run: go test -coverprofile=coverage.out ./...
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: fabianogoes/fiap-tech-challenge-kitchen-api
           files: coverage.out
           flags: unittests
           name: codecov-umbrella
