--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,5 @@
 APP_ENV=development
 APP_PORT=:8020
-DB_HOST=localhost
-DB_PORT=27017
-DB_DATABASE=kitchen_db
-DB_USERNAME=root
-DB_PASSWORD=pass
-API_VERSION=1.0
+DB_URI=mongodb://root:pass@localhost:27017/
+DB_NAME=tech_challenge_kitchen_db
+API_VERSION=4.0
