--- a/.infra/kubernetes/deployment.yaml
+++ b/.infra/kubernetes/deployment.yaml
@@ -39,38 +39,12 @@ spec:
             - secretRef:
                 name: app-secret
           env:
-            - name: DB_HOST
+            - name: DB_URI
               valueFrom:
                 secretKeyRef:
                   name: app-secret
-                  key: DB_HOST
-            - name: DB_DATABASE
-              valueFrom:
-                secretKeyRef:
-                  name: app-secret
-                  key: POSTGRES_DB
-            - name: DB_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: app-secret
-                  key: POSTGRES_USER
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: app-secret
-                  key: POSTGRES_PASSWORD
-            - name: TOKEN_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: app-secret
-                  key: TOKEN_SECRET
-            - name: DB_PORT
-              value: "5432"
-            - name: APP_ENV
-              value: "production"
-            - name: APP_PORT
-              value: ":8080"
-            - name: API_VERSION
-              value: "2024.5.1.5"
+                  key: DB_URI
+            - name: DB_NAME
+              value: "tech_challenge_kitchen_db"
       restartPolicy: Always
 
