--- a/.infra/kubernetes/secrets.yaml
+++ b/.infra/kubernetes/secrets.yaml
@@ -6,11 +6,4 @@ metadata:
     app: app-secret
 type: Opaque
 data:
-  DB_CONNECTION: cG9zdGdyZXM=
-  DB_HOST: dGVjaC1jaGFsbGVuZ2UtZGIuY3pqMW54Z2Q4djljLnVzLWVhc3QtMS5yZHMuYW1hem9uYXdzLmNvbQo=
-  DB_PORT: NTQzMg==
-  POSTGRES_DB: dGVjaF9jaGFsbGVuZ2VfZGIK
-  POSTGRES_USER: dGVjaF9jaGFsbGVuZ2VfdXNyCg==
-  POSTGRES_PASSWORD: dGVjaF9jaGFsbGVuZ2VfcHdkCg==
-  POSTGRES_HOST_AUTH_METHOD: dHJ1c3Q=
-  TOKEN_SECRET: S09LWGxlS0F2K0tYbFNrZ0lIVERvU0J2YkdoaGJtUnZJRzhnY1hWbElHRnhkV2tnYldGdXc2a2dQejgvSUNqaWw1WGlnTC9pbDVVcAo=
+  DB_URI: bW9uZ29kYitzcnY6Ly90ZWNoX2NoYWxsZW5nZV9wYXltZW50X3VzcjpBOWJ6TEFzWmY4MG5KZ2dVQGZpYXAtdGVjaC1jaGFsbGVuZ2UtZGIuZWc4NHdhaC5tb25nb2RiLm5ldC8/cmV0cnlXcml0ZXM9dHJ1ZSZ3PW1ham9yaXR5JmFwcE5hbWU9ZmlhcC10ZWNoLWNoYWxsZW5nZS1kYg==
