--- a/.infra/kubernetes/deployment.yaml
+++ b/.infra/kubernetes/deployment.yaml
@@ -46,5 +46,11 @@ spec:
                   key: DB_URI
             - name: DB_NAME
               value: "tech_challenge_kitchen_db"
+            - name: APP_ENV
+              value: "production"
+            - name: APP_PORT
+              value: ":8020"
+            - name: API_VERSION
+              value: "4.0"
       restartPolicy: Always
 
