--- a/.infra/kubernetes/deployment.yaml
+++ b/.infra/kubernetes/deployment.yaml
@@ -37,19 +37,19 @@ spec:
               cpu: 1m
           envFrom:
             - secretRef:
-                name: app-secret
+                name: kitchen-secret
           env:
             - name: DB_URI
               valueFrom:
                 secretKeyRef:
-                  name: app-secret
+                  name: kitchen-secret
                   key: DB_URI
             - name: DB_NAME
               value: "tech_challenge_kitchen_db"
             - name: APP_ENV
               value: "production"
             - name: APP_PORT
-              value: ":8020"
+              value: ":8080"
             - name: API_VERSION
               value: "4.0"
       restartPolicy: Always
