--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,7 +99,7 @@ jobs:
 
   deploy:
     name: Deploy Kubernetes
-    # if: false
+    if: false
     runs-on: ubuntu-latest
     needs: build_docker
     permissions:
